--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -75,7 +75,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_ct_path = list(ct_image_paths.items())[0][1]\n",
+    "structure_set = list(structure_sets.items())[0][1]\n",
+    "\n",
+    "single_contour_dataset = structure_set.ROIContourSequence[0].ContourSequence[0]\n",
+    "\n",
+    "single_contour_dataset.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
+    "single_contour_dataset.ContourData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_set.ROIContourSequence[0].ReferencedROINumber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_set.StructureSetROISequence[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_to_name_map = {\n",
+    "    roi_sequence_item.ROINumber: roi_sequence_item.ROIName\n",
+    "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
+    "}\n",
+    "\n",
+    "number_to_name_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contour_to_ct_map = {}\n",
+    "\n",
+    "for uid, structure_set in structure_sets.items():\n",
+    "    structure_set.ROIContourSequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_to_structure_mapping = {}\n",
+    "\n",
+    "for key in ct_image_paths.keys():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# structure_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_ct_path = list(ct_image_paths.items())[100][1]\n",
     "dcm = pydicom.read_file(a_ct_path, force=True)"
    ]
   },
@@ -86,7 +214,7 @@
    "outputs": [],
    "source": [
     "dcm.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian\n",
-    "dcm.pixel_array"
+    "pixel_array = dcm.pixel_array"
    ]
   },
   {
@@ -94,7 +222,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.contourf(pixel_array)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(pixel_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.data.Dataset.from_tensor_slices([pixel_array])"
+   ]
   },
   {
    "cell_type": "code",
