building out structure map
Former-commit-id: 901bda3f56dc7909a44cd1ea76828739c9fa8fa0

--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import functools\n",
+    "import pathlib\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +29,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dcm_paths = pymedphys.zip_data_paths(\"dummy-ct-and-struct.zip\")"
+    "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
+    "dcm_paths = list(data_path_root.rglob('**/*.dcm'))\n",
+    "# dcm_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_aliases = {\n",
+    "    \"patient\": \"patient\",\n",
+    "    \"Patient\": \"patient\",\n",
+    "    \"PATIENT\": \"patient\",\n",
+    "    \"Number1\": \"remove\",\n",
+    "    \"Number2\": \"remove\",\n",
+    "    \"Number3\": \"remove\",\n",
+    "    \"Number4\": \"remove\",\n",
+    "    \"ANT Box\": \"box\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structures_to_collect = [\"patient\", \"box\"]\n",
+    "slice_remove_name = \"remove\""
    ]
   },
   {
@@ -40,7 +71,7 @@
     "dcm_headers = []\n",
     "\n",
     "for dcm_path in dcm_paths:\n",
-    "    dcm_headers.append(pydicom.read_file(dcm_path, force=True, stop_before_pixels=True))"
+    "    dcm_headers.append(pydicom.read_file(dcm_path, force=True, specific_tags=['SOPInstanceUID', 'SOPClassUID']))"
    ]
   },
   {
@@ -62,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_sets = {\n",
-    "    header.SOPInstanceUID: header\n",
-    "    for header in dcm_headers\n",
+    "structure_set_paths = {\n",
+    "    header.SOPInstanceUID: path\n",
+    "    for header, path in zip(dcm_headers, dcm_paths)\n",
     "    if header.SOPClassUID.name == \"RT Structure Set Storage\"\n",
     "}"
    ]
@@ -75,7 +106,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_set = list(structure_sets.items())[0][1]\n",
+    "names = set()\n",
+    "\n",
+    "for uid, path in structure_set_paths.items():\n",
+    "    dcm = pydicom.read_file(path, force=True, specific_tags=['StructureSetROISequence'])\n",
+    "    for item in dcm.StructureSetROISequence:\n",
+    "        names.add(item.ROIName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_map = {\n",
+    "    'BB': \"bite_block\",\n",
+    "    'Bladder': \"bladder\",\n",
+    "    \"Bladder_obj\": None,\n",
+    "    \"Bowel\": 'bowel',\n",
+    "    \"Bowel_obj\": None,\n",
+    "    \"Box Adapter\": None,\n",
+    "    \"BoxAdaptor\": None,\n",
+    "    \"Brain\": \"brain\",\n",
+    "    \"Brainstem\": \"brainstem\",\n",
+    "    \"Bulla Lt\": \"bulla_left\",\n",
+    "    \"Bulla Rt\": \"bulla_right\",\n",
+    "    \"CORDprv\": None,\n",
+    "    \"CTV\": None,\n",
+    "    \"CTV Eval\": None,\n",
+    "    \"CTV thyroids\": None,\n",
+    "    \"CTVCT\": None,\n",
+    "    \"CTVMRI\": None,\n",
+    "    \"CTVSmall\": None,\n",
+    "    \"CTVeval\": None,\n",
+    "    \"CTVnew\": None,\n",
+    "    \"Chiasm\": \"chiasm\",\n",
+    "    \"Colon\": \"colon\",\n",
+    "    \"Colon_obj\": None,\n",
+    "    \"Cord\": \"cord\",\n",
+    "    \"Cord PRV\": None,\n",
+    "    \"Couch Edge\": None,\n",
+    "    \"Couch Foam Half Couch\": None,\n",
+    "    \"Couch Outer Half Couch\": None,\n",
+    "    \"GTV\": None,\n",
+    "    \"24.000Gy\": None,\n",
+    "    \"AdrenalGTV\": None,\n",
+    "    \"Bone_or\": None,\n",
+    "    \"BrainObj\": None,\n",
+    "    \"CTV1\": None,\n",
+    "    \"CTV_LN\": None,\n",
+    "    \"CTV_obj\": None,\n",
+    "    \"CTV_uncropped\": None,\n",
+    "    \"CTVmargin\": None,\n",
+    "    \"CTVmargin_eval\": None,\n",
+    "    \"CTVobj\": None,\n",
+    "    \"CTVobjnew\": None,\n",
+    "    \"CTVoptimise\": None,\n",
+    "    \"CTVoptimisenew\": None,\n",
+    "    \"Cauda equina\": \"causa_equina\",\n",
+    "    \"GTV LN\": None,\n",
+    "    \"GTV thyroids\": None,\n",
+    "    \"GTV+SCAR\": None,\n",
+    "    \"GTV-2\": None,\n",
+    "    \"OD\": \"lens_right\",\n",
+    "    \"OD Lens\": \"lens_right\",\n",
+    "    \"Lens OD\": \"lens_right\",\n",
+    "    \"OS\": \"lens_left\",\n",
+    "    \"OS lens\": \"lens_left\",\n",
+    "    \"Lens OS\": \"lens_left\",\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapped_names = set(names_map.keys())\n",
+    "print(mapped_names.difference(names))\n",
+    "names.difference(mapped_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_set_path = list(structure_set_paths.items())[0][1]\n",
+    "structure_set_path\n",
+    "\n",
+    "structure_set = pydicom.read_file(structure_set_path, force=True, specific_tags=['ROIContourSequence', 'StructureSetROISequence'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_to_name_map = {\n",
+    "    roi_sequence_item.ROINumber: structure_aliases[roi_sequence_item.ROIName]\n",
+    "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
+    "    if roi_sequence_item.ROIName in structure_aliases.keys()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_to_name_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "single_contour_dataset = structure_set.ROIContourSequence[0].ContourSequence[0]\n",
     "\n",
