further expanding structure map
Former-commit-id: 33d51d63b84eda23cb9a11e47d02ef3eeaa8f522

--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -140,6 +140,7 @@
     "    \"Brain\": \"brain\",\n",
     "    \"Brainstem\": \"brainstem\",\n",
     "    \"Bulla Lt\": \"bulla_left\",\n",
+    "    \"L bulla\": \"bulla_left\",\n",
     "    \"Bulla Rt\": \"bulla_right\",\n",
     "    \"CORDprv\": None,\n",
     "    \"CTV\": None,\n",
@@ -178,13 +179,65 @@
     "    \"GTV thyroids\": None,\n",
     "    \"GTV+SCAR\": None,\n",
     "    \"GTV-2\": None,\n",
+    "    \"GTV/scar\": None,\n",
+    "    \"GTVCT\": None,\n",
+    "    \"GTVMRI\": None,\n",
+    "    \"GTV_Combined\": None,\n",
+    "    \"GTVcombined\": None,\n",
+    "    \"GTVobj\": None,\n",
+    "    \"GTVoptimise\": None,\n",
+    "    \"Heart\": \"heart\",\n",
+    "    \"Heart/GVs\": None,\n",
+    "    \"INGUINALobj\": None,\n",
+    "    \"Implant\": None,\n",
+    "    \"Implant_Avoid\": None,\n",
+    "    \"InguinalLn\": None,\n",
+    "    \"Kidney Lt\": \"kidney_left\",\n",
+    "    \"Kidney Rt\": \"kidney_right\",\n",
+    "    \"LN\": None,\n",
+    "    \"LN GTV\": None,\n",
+    "    \"LN Mandibular\": None,\n",
+    "    \"LN Retropharyngeal\": None,\n",
+    "    \"LNCTV\": None,\n",
+    "    \"LNeval\": None,\n",
+    "    \"Lacrimal Lt\": \"lacrimal_left\",\n",
+    "    \"Lacrimal Rt\": \"lacrimal_right\",\n",
+    "    \"Larynx\": \"larynx\",\n",
+    "    \"Larynx/trachea\": None,\n",
+    "    \"Liver\": \"liver\",\n",
+    "    \"Lung Lt\": \"lung_left\",\n",
+    "    \"Lung Rt\": \"lung_right\",\n",
+    "    \"Lung_Combined\": None,\n",
+    "    \"Lung_L\": \"lung_left\",\n",
+    "    \"Lung_R\": \"lung_right\",\n",
+    "    \"Oesophagus\": \"oesophagus\",\n",
     "    \"OD\": \"lens_right\",\n",
     "    \"OD Lens\": \"lens_right\",\n",
     "    \"Lens OD\": \"lens_right\",\n",
     "    \"OS\": \"lens_left\",\n",
     "    \"OS lens\": \"lens_left\",\n",
     "    \"Lens OS\": \"lens_left\",\n",
-    "    \n",
+    "    \"OpPathPRV\": None,\n",
+    "    \"L optic N\": \"optic_nerve_left\",\n",
+    "    \"OpticNLeft\": \"optic_nerve_left\",\n",
+    "    \"LopticN\": \"optic_nerve_left\",\n",
+    "    \"OpticL\": \"optic_nerve_left\",\n",
+    "    \"OpticNRight\": \"optic_nerve_right\",\n",
+    "    \"OpticR\": \"optic_nerve_right\",\n",
+    "    \"PTV\": None,\n",
+    "    \"PTV LN eval\": None,\n",
+    "    \"PTV Prostate\": None,\n",
+    "    \"PTV bladder\": None,\n",
+    "    \"PTV crop\": None,\n",
+    "    \"PTV eval\": None,\n",
+    "    \"PTV nodes\": None,\n",
+    "    \"PTV thyroids\": None,\n",
+    "    \"PTV thyroid eval\": None,\n",
+    "    \"PTV uncropped\": None,\n",
+    "    \"PTV+2cm\": None,\n",
+    "    \"PTV+4cm\": None,\n",
+    "    \"PTV_Combined\": None,\n",
+    "    \"PTV_INGUINAL\": None\n",
     "}"
    ]
   },
