complete structure name mapping
Former-commit-id: de15cf8c557433583150cd109ae9c1d6c094c1e4

--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -71,7 +71,8 @@
     "dcm_headers = []\n",
     "\n",
     "for dcm_path in dcm_paths:\n",
-    "    dcm_headers.append(pydicom.read_file(dcm_path, force=True, specific_tags=['SOPInstanceUID', 'SOPClassUID']))"
+    "    dcm_headers.append(pydicom.read_file(\n",
+    "        dcm_path, force=True, specific_tags=['SOPInstanceUID', 'SOPClassUID']))"
    ]
   },
   {
@@ -109,18 +110,10 @@
     "names = set()\n",
     "\n",
     "for uid, path in structure_set_paths.items():\n",
-    "    dcm = pydicom.read_file(path, force=True, specific_tags=['StructureSetROISequence'])\n",
+    "    dcm = pydicom.read_file(\n",
+    "        path, force=True, specific_tags=['StructureSetROISequence'])\n",
     "    for item in dcm.StructureSetROISequence:\n",
     "        names.add(item.ROIName)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# names"
    ]
   },
   {
@@ -139,10 +132,15 @@
     "    \"BoxAdaptor\": None,\n",
     "    \"Brain\": \"brain\",\n",
     "    \"Brainstem\": \"brainstem\",\n",
+    "    \"brainstem\": \"brainstem\",\n",
     "    \"Bulla Lt\": \"bulla_left\",\n",
     "    \"L bulla\": \"bulla_left\",\n",
     "    \"Bulla Rt\": \"bulla_right\",\n",
-    "    \"CORDprv\": None,\n",
+    "    \"Bulla L\": \"bulla_left\",\n",
+    "    \"Bulla Left\": \"bulla_left\",\n",
+    "    \"Bulla R\": \"bulla_right\",\n",
+    "    \"Bulla Right\": \"bulla_right\",\n",
+    "    \"R bulla\": \"bulla_right\",\n",
     "    \"CTV\": None,\n",
     "    \"CTV Eval\": None,\n",
     "    \"CTV thyroids\": None,\n",
@@ -153,14 +151,27 @@
     "    \"CTVnew\": None,\n",
     "    \"Chiasm\": \"chiasm\",\n",
     "    \"Colon\": \"colon\",\n",
+    "    \"colon\": \"colon\",\n",
     "    \"Colon_obj\": None,\n",
-    "    \"Cord\": \"cord\",\n",
+    "    \"Cord\": \"spinal_cord\",\n",
+    "    \"SPINAL CORD\": \"spinal_cord\",\n",
+    "    \"Spinal Cord\": \"spinal_cord\",\n",
     "    \"Cord PRV\": None,\n",
     "    \"Couch Edge\": None,\n",
     "    \"Couch Foam Half Couch\": None,\n",
     "    \"Couch Outer Half Couch\": None,\n",
     "    \"GTV\": None,\n",
     "    \"24.000Gy\": None,\n",
+    "    \"15.000Gy_AH\": None,\n",
+    "    \"15.000Gy_NC\": None,\n",
+    "    \"15.000Gy_v\": None,\n",
+    "    \"30.000Gy_AH\": None,\n",
+    "    \"30.000Gy_NC\": None,\n",
+    "    \"30.000Gy_v\": None,\n",
+    "    \"95%_Large\": None,\n",
+    "    \"95.00%_SMALL\": None,\n",
+    "    \"BowelObj_Large\": None,\n",
+    "    \"BowelObj_small\": None,\n",
     "    \"AdrenalGTV\": None,\n",
     "    \"Bone_or\": None,\n",
     "    \"BrainObj\": None,\n",
@@ -174,7 +185,7 @@
     "    \"CTVobjnew\": None,\n",
     "    \"CTVoptimise\": None,\n",
     "    \"CTVoptimisenew\": None,\n",
-    "    \"Cauda equina\": \"causa_equina\",\n",
+    "    \"Cauda equina\": \"cauda_equina\",\n",
     "    \"GTV LN\": None,\n",
     "    \"GTV thyroids\": None,\n",
     "    \"GTV+SCAR\": None,\n",
@@ -193,7 +204,9 @@
     "    \"Implant_Avoid\": None,\n",
     "    \"InguinalLn\": None,\n",
     "    \"Kidney Lt\": \"kidney_left\",\n",
+    "    \"Lkidney\": \"kidney_left\",\n",
     "    \"Kidney Rt\": \"kidney_right\",\n",
+    "    \"Rkidney\": \"kidney_right\",\n",
     "    \"LN\": None,\n",
     "    \"LN GTV\": None,\n",
     "    \"LN Mandibular\": None,\n",
@@ -206,24 +219,34 @@
     "    \"Larynx/trachea\": None,\n",
     "    \"Liver\": \"liver\",\n",
     "    \"Lung Lt\": \"lung_left\",\n",
+    "    \"Lung Left\": \"lung_left\",\n",
     "    \"Lung Rt\": \"lung_right\",\n",
     "    \"Lung_Combined\": None,\n",
     "    \"Lung_L\": \"lung_left\",\n",
     "    \"Lung_R\": \"lung_right\",\n",
+    "    \"Lung Right\": \"lung_right\",\n",
     "    \"Oesophagus\": \"oesophagus\",\n",
+    "    \"Esophagus\": 'oesophagus',\n",
+    "    \"esophagus\": 'oesophagus',\n",
     "    \"OD\": \"lens_right\",\n",
     "    \"OD Lens\": \"lens_right\",\n",
     "    \"Lens OD\": \"lens_right\",\n",
+    "    \"ODlens\": \"lens_right\",\n",
     "    \"OS\": \"lens_left\",\n",
     "    \"OS lens\": \"lens_left\",\n",
     "    \"Lens OS\": \"lens_left\",\n",
+    "    \"OSlens\": \"lens_left\",\n",
     "    \"OpPathPRV\": None,\n",
     "    \"L optic N\": \"optic_nerve_left\",\n",
     "    \"OpticNLeft\": \"optic_nerve_left\",\n",
     "    \"LopticN\": \"optic_nerve_left\",\n",
     "    \"OpticL\": \"optic_nerve_left\",\n",
+    "    \"Loptic\": \"optic_nerve_left\",\n",
     "    \"OpticNRight\": \"optic_nerve_right\",\n",
     "    \"OpticR\": \"optic_nerve_right\",\n",
+    "    \"R optic N\": \"optic_nerve_right\",\n",
+    "    \"Roptic\": \"optic_nerve_right\",\n",
+    "    \"RopticN\": \"optic_nerve_right\",\n",
     "    \"PTV\": None,\n",
     "    \"PTV LN eval\": None,\n",
     "    \"PTV Prostate\": None,\n",
@@ -237,8 +260,170 @@
     "    \"PTV+2cm\": None,\n",
     "    \"PTV+4cm\": None,\n",
     "    \"PTV_Combined\": None,\n",
-    "    \"PTV_INGUINAL\": None\n",
-    "}"
+    "    \"PTV_INGUINAL\": None,\n",
+    "    'Pituitary': 'pituitary',\n",
+    "    \"Prostate\": 'prostate',\n",
+    "    \"prostate\": 'prostate',\n",
+    "    \"Rectum\": 'rectum',\n",
+    "    \"OpticPathway\": 'optic_pathway',\n",
+    "    \"Small Bowel\": \"small_bowel\",\n",
+    "    \"Spleen\": \"spleen\",\n",
+    "    \"Stomach\": \"stomach\",\n",
+    "    \"Thyroid\": \"thyroid\",\n",
+    "    \"Tongue\": \"tongue\",\n",
+    "    \"tongue\": \"tongue\",\n",
+    "    \"Trachea\": \"trachea\",\n",
+    "    \"trachea\": \"trachea\",\n",
+    "    \"Urethra\": \"urethra\",\n",
+    "    \"Vacbag\": \"vacuum_bag\",\n",
+    "    \"vacbag\": \"vacuum_bag\",\n",
+    "    \"patient\": \"patient\",\n",
+    "    \"testicles\": \"testicles\"\n",
+    "}\n",
+    "\n",
+    "ignore_list = [\n",
+    "    'CTV start',\n",
+    "    'CTV_Combined',\n",
+    "    'ColonObj_large',\n",
+    "    'ColonObj_small',\n",
+    "    'CordPRV',\n",
+    "    'CORDprv',\n",
+    "    'Couch Foam Full Couch',\n",
+    "    'Couch Outer Full Couch',\n",
+    "    'Couch Parts Full Couch',\n",
+    "    'LnCTV',\n",
+    "    'LnGTV',\n",
+    "    'Mand Ln',\n",
+    "    'OpPathway',\n",
+    "    'PTV Ln',\n",
+    "    'PTV Ln PreSc',\n",
+    "    'PTV total combined',\n",
+    "    'PTVCombined_Large',\n",
+    "    'PTVCombined_Small',\n",
+    "    'PTVLarge',\n",
+    "    'PTVSmall',\n",
+    "    'PTV_Eval',\n",
+    "    'PTV_LN',\n",
+    "    'PTV_LN_15/2',\n",
+    "    'PTV_LNeval',\n",
+    "    'PTV_eval',\n",
+    "    'PTV_eval_small',\n",
+    "    'PTV_obj',\n",
+    "    'PTVcombined',\n",
+    "    'PTVcombined_15/2',\n",
+    "    'PTVcombined_Eval',\n",
+    "    'PTVeval',\n",
+    "    'PTVeval_combined',\n",
+    "    'PTVnew',\n",
+    "    'PTVobj',\n",
+    "    'PTVobjnew',\n",
+    "    'PTVoptimise',\n",
+    "    'PTVoptimisenew',\n",
+    "    'PTVpituitary',\n",
+    "    'PTVprimary',\n",
+    "    'PTVsmooth',\n",
+    "    'Patient small',\n",
+    "    'Patient-bolus',\n",
+    "    'R prescap Ln',\n",
+    "    'Rectal_Syringe',\n",
+    "    'RectumObj_large',\n",
+    "    'RectumObj_small',\n",
+    "    'Rectum_obj',\n",
+    "    'RetroLn',\n",
+    "    'CTVcombined',\n",
+    "    'CTVlns',\n",
+    "    'CTVprimary',\n",
+    "    'CombinedLung',\n",
+    "    'Cord-PTV',\n",
+    "    'External',\n",
+    "    'GTVscar',\n",
+    "    'HeartCTV',\n",
+    "    'HeartGTV',\n",
+    "    'HeartPTV',\n",
+    "    'Inguinal LnCTV',\n",
+    "    'Inguinal+2cm',\n",
+    "    'InguinalPTV_eval',\n",
+    "    'Kidneys (Combined)',\n",
+    "    'LN CTV',\n",
+    "    'LN_PTV_eval',\n",
+    "    'LN_ring',\n",
+    "    'Lung',\n",
+    "    'Lung total',\n",
+    "    'LungGTV1',\n",
+    "    'LungGTV2',\n",
+    "    'LungGTV3',\n",
+    "    'LungGTV4',\n",
+    "    'LungGTV5',\n",
+    "    'LungGTVMIP',\n",
+    "    'LungPTV',\n",
+    "    'MandiblePTV_eval',\n",
+    "    'Mandible_ring',\n",
+    "    'Nasal PTVeval',\n",
+    "    'Nasal_ring',\n",
+    "    'ODnew',\n",
+    "    'OR_ Bone',\n",
+    "    'OR_Metal',\n",
+    "    'OR_Tissue',\n",
+    "    'PTV Eval',\n",
+    "    'PTVLn',\n",
+    "    'PTV_Combined_eval',\n",
+    "    'PTV_Distal',\n",
+    "    'PTV_Distal_Crop',\n",
+    "    'PTV_LN_Inguinal',\n",
+    "    'PTV_LN_Popliteal',\n",
+    "    'PTV_LN_Smooth',\n",
+    "    'PTV_Sup',\n",
+    "    'PTVdistal_eval',\n",
+    "    'PTVsubSIB2mm',\n",
+    "    'Popliteal LnCTV',\n",
+    "    'Popliteal+2cm',\n",
+    "    'SC_Olap',\n",
+    "    'SC_Olap2',\n",
+    "    'SC_Olapnew',\n",
+    "    'SC_Olapnew2',\n",
+    "    'SIB',\n",
+    "    'Scar',\n",
+    "    'Scar marker',\n",
+    "    'Skin Spare',\n",
+    "    'Skin Sparing',\n",
+    "    'Skin spare',\n",
+    "    'Small Bowel Replan',\n",
+    "    'Small Bowel replan',\n",
+    "    'SmallPTV',\n",
+    "    'Small_PTV_Combined',\n",
+    "    'Structure1',\n",
+    "    'Structure2',\n",
+    "    'Structure3',\n",
+    "    'Structure4',\n",
+    "    'Structure5',\n",
+    "    'Syringe fill',\n",
+    "    'TEST',\n",
+    "    'Tissue_or',\n",
+    "    'Tracheaoesophagus',\n",
+    "    'Urethra/vulva',\n",
+    "    'Urinary System',\n",
+    "    'bolus_5mm',\n",
+    "    'bowel_obj',\n",
+    "    'brain-PTV',\n",
+    "    'brain-ptv',\n",
+    "    'combined PTV',\n",
+    "    'ctv cropped',\n",
+    "    'lungs',\n",
+    "    'p',\n",
+    "    'patient & bolus',\n",
+    "    'patient no bolus',\n",
+    "    'patient&Bolus',\n",
+    "    'patient&bolus',\n",
+    "    'patient-bolus',\n",
+    "    'patient_1',\n",
+    "    'patientbol',\n",
+    "    'skin spare', \n",
+    "    'urethra_PRV', \n",
+    "    'whole lung'\n",
+    "]\n",
+    "\n",
+    "for key in ignore_list:\n",
+    "    names_map[key] = None"
    ]
   },
   {
@@ -258,10 +443,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "set([item for key, item in names_map.items()]).difference({None})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "structure_set_path = list(structure_set_paths.items())[0][1]\n",
     "structure_set_path\n",
     "\n",
-    "structure_set = pydicom.read_file(structure_set_path, force=True, specific_tags=['ROIContourSequence', 'StructureSetROISequence'])"
+    "structure_set = pydicom.read_file(\n",
+    "    structure_set_path, \n",
+    "    force=True, \n",
+    "    specific_tags=['ROIContourSequence', 'StructureSetROISequence'])"
    ]
   },
   {
@@ -271,9 +503,8 @@
    "outputs": [],
    "source": [
     "number_to_name_map = {\n",
-    "    roi_sequence_item.ROINumber: structure_aliases[roi_sequence_item.ROIName]\n",
+    "    roi_sequence_item.ROINumber: names_map[roi_sequence_item.ROIName]\n",
     "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "    if roi_sequence_item.ROIName in structure_aliases.keys()\n",
     "}"
    ]
   },
