begin masking by patient
Former-commit-id: 6090ac7bb8d25ce0e89e76b02f4fb4c5299b111a

--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -451,41 +451,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "structure_set_path = list(structure_set_paths.items())[0][1]\n",
     "structure_set_path\n",
@@ -505,7 +470,10 @@
     "number_to_name_map = {\n",
     "    roi_sequence_item.ROINumber: names_map[roi_sequence_item.ROIName]\n",
     "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "}"
+    "    if names_map[roi_sequence_item.ROIName] is not None\n",
+    "}\n",
+    "\n",
+    "number_to_name_map"
    ]
   },
   {
@@ -514,8 +482,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_to_name_map"
+    "structure_set.ROIContourSequence[0].ReferencedROINumber"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_set.ROIContourSequence[0].ContourSequence[0].ContourImageSequence[0].ReferencedSOPInstanceUID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours_by_ct_uid = {}\n",
+    "\n",
+    "for roi_contour_sequence_item in structure_set.ROIContourSequence:\n",
+    "    try:\n",
+    "        structure_name = number_to_name_map[roi_contour_sequence_item.ReferencedROINumber]\n",
+    "    except KeyError:\n",
+    "        continue\n",
+    "        \n",
+    "    for contour_sequence_item in roi_contour_sequence_item.ContourSequence:\n",
+    "        ct_uid = contour_sequence_item.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
+    "        \n",
+    "        try:\n",
+    "            _ = contours_by_ct_uid[ct_uid]\n",
+    "        except KeyError:\n",
+    "            contours_by_ct_uid[ct_uid] = dict()\n",
+    "                    \n",
+    "        try:\n",
+    "            contours_by_ct_uid[ct_uid][structure_name].append(contour_sequence_item.ContourData)\n",
+    "        except KeyError:\n",
+    "            contours_by_ct_uid[ct_uid][structure_name] = [contour_sequence_item.ContourData]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_uid = list(contours_by_ct_uid.keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_path = ct_image_paths[ct_uid]\n",
+    "dcm_ct = pydicom.read_file(ct_path, force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dcm_ct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# contours_by_ct_uid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From Matthew Coopers work in ../old/data_generator.py\n",
+    "\n",
+    "position = dcm_ct.ImagePositionPatient\n",
+    "spacing = [x for x in dcm_ct.PixelSpacing] + [dcm_ct.SliceThickness]\n",
+    "orientation = dcm_ct.ImageOrientationPatient\n",
+    "\n",
+    "dx, dy, *_ = spacing\n",
+    "Cx, Cy, *_ = position\n",
+    "Ox, Oy = orientation[0], orientation[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours_by_ct_uid[ct_uid]['patient']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyz = (\n",
+    "    dicom_structures.ROIContourSequence[structure_index]\n",
+    "    .ContourSequence[index]\n",
+    "    .ContourData\n",
+    ")\n",
+    "\n",
+    "x = np.array(xyz[0::3])\n",
+    "y = np.array(xyz[1::3])\n",
+    "\n",
+    "r = (y - Cy) / dy * Oy\n",
+    "c = (x - Cx) / dx * Ox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
