--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -538,7 +538,8 @@
    "outputs": [],
    "source": [
     "ct_path = ct_image_paths[ct_uid]\n",
-    "dcm_ct = pydicom.read_file(ct_path, force=True)"
+    "dcm_ct = pydicom.read_file(ct_path, force=True)\n",
+    "dcm_ct.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian"
    ]
   },
   {
@@ -582,6 +583,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ct_size = np.shape(dcm_ct.pixel_array)\n",
+    "\n",
+    "x_grid = np.arange(Cx, Cx + ct_size[0]*dx*Ox, dx*Ox)\n",
+    "y_grid = np.arange(Cy, Cy + ct_size[1]*dy*Oy, dy*Oy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "contours_by_ct_uid[ct_uid]['patient']"
    ]
   },
@@ -591,58 +604,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyz = (\n",
-    "    dicom_structures.ROIContourSequence[structure_index]\n",
-    "    .ContourSequence[index]\n",
-    "    .ContourData\n",
-    ")\n",
+    "expansion = 5\n",
+    "new_ct_size = np.array(ct_size) * expansion\n",
     "\n",
-    "x = np.array(xyz[0::3])\n",
-    "y = np.array(xyz[1::3])\n",
     "\n",
-    "r = (y - Cy) / dy * Oy\n",
-    "c = (x - Cx) / dx * Ox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "expanded_mask = np.zeros(new_ct_size)\n",
     "\n",
-    "single_contour_dataset = structure_set.ROIContourSequence[0].ContourSequence[0]\n",
-    "\n",
-    "single_contour_dataset.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
-    "single_contour_dataset.ContourData"
+    "for xyz in contours_by_ct_uid[ct_uid]['patient']:\n",
+    "    x = np.array(xyz[0::3])\n",
+    "    y = np.array(xyz[1::3])\n",
+    "    z = xyz[2::3]\n",
+    "    \n",
+    "    assert len(set(z)) == 1\n",
+    "    \n",
+    "    r = ((y - Cy) / dy * Oy) * expansion\n",
+    "    c = ((x - Cx) / dx * Ox) * expansion\n",
+    "    \n",
+    "    expanded_mask = np.logical_or(expanded_mask, skimage.draw.polygon2mask(new_ct_size, np.array(list(zip(r, c)))))"
    ]
   },
   {
@@ -651,141 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_set.ROIContourSequence[0].ReferencedROINumber"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_set.StructureSetROISequence[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_to_name_map = {\n",
-    "    roi_sequence_item.ROINumber: roi_sequence_item.ROIName\n",
-    "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "}\n",
-    "\n",
-    "number_to_name_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contour_to_ct_map = {}\n",
-    "\n",
-    "for uid, structure_set in structure_sets.items():\n",
-    "    structure_set.ROIContourSequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_to_structure_mapping = {}\n",
-    "\n",
-    "for key in ct_image_paths.keys():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# structure_sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_ct_path = list(ct_image_paths.items())[100][1]\n",
-    "dcm = pydicom.read_file(a_ct_path, force=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian\n",
-    "pixel_array = dcm.pixel_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(pixel_array)\n",
+    "plt.contourf(expanded_mask)\n",
     "plt.axis('equal')"
    ]
   },
@@ -795,207 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.shape(pixel_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.data.Dataset.from_tensor_slices([pixel_array])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm[-1].SOPClassUID.name == \"CT Image Storage\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm[-1].SOPClassUID.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_struct.list_structures(dcm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 7\n",
-    "x, y, z = dcm_struct.pull_structure('ANT Box', dcm)\n",
-    "\n",
-    "x = x[i]\n",
-    "y = y[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(x, y)\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dx, dy = 2, 2\n",
-    "Cx, Cy = -100, -300\n",
-    "\n",
-    "Ox, Oy = 1, 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = (y - Cy) / dy * Oy\n",
-    "c = (x - Cx) / dx * Ox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array(list(zip(r*4, c*4)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_size = 128\n",
-    "expansion = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_mask = skimage.draw.polygon2mask((img_size * expansion, img_size * expansion), np.array(list(zip(r*expansion, c*expansion))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(expanded_mask)"
+    "new_ct_size"
    ]
   },
   {
@@ -1005,14 +649,12 @@
    "outputs": [],
    "source": [
     "def reduce_expanded_mask(expanded_mask, img_size, expansion):\n",
-    "    expanded_mask = tf.dtypes.cast(expanded_mask, tf.float32)\n",
-    "    return tf.reduce_mean(\n",
-    "        tf.reduce_mean(\n",
-    "            tf.reshape(expanded_mask, (img_size, expansion, img_size, expansion)),\n",
-    "            axis=1,\n",
-    "        ),\n",
-    "        axis=2,\n",
-    "    )"
+    "    return np.mean(np.mean(\n",
+    "        tf.reshape(expanded_mask, (img_size, expansion, img_size, expansion)),\n",
+    "        axis=1), axis=2)\n",
+    "\n",
+    "mask = reduce_expanded_mask(expanded_mask, ct_size[0], expansion)\n",
+    "mask = 2 * mask - 1"
    ]
   },
   {
@@ -1021,7 +663,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = reduce_expanded_mask(expanded_mask, img_size, expansion)"
+    "# plt.figure(figsize=(20, 20))\n",
+    "\n",
+    "plt.contourf(x_grid, y_grid, mask)\n",
+    "plt.colorbar()\n",
+    "\n",
+    "cs = plt.contour(x_grid, y_grid, mask, [0])\n",
+    "plt.axis('equal')"
    ]
   },
   {
@@ -1030,8 +678,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(mask)"
+    "contours = [\n",
+    "    path.vertices for path in cs.collections[0].get_paths()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
+    "plt.plot(contours[0][:,0], contours[0][:,1])\n",
+    "plt.plot(contours[1][:,0], contours[1][:,1])\n",
+    "\n",
+    "for xyz in contours_by_ct_uid[ct_uid]['patient']:\n",
+    "    x = np.array(xyz[0::3])\n",
+    "    y = np.array(xyz[1::3])\n",
+    "    \n",
+    "    plt.plot(x, y)\n",
+    "\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
