fix expansion induced offset

--- a/protyping/auto-segmentation/sb/04-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/04-mask-with-edge-falloff.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH data here, file structure doesn't matter:\n",
+    "# Put all of the SASH DICOM data here, file structure doesn't matter:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
     "\n",
     "dcm_paths = list(data_path_root.rglob('**/*.dcm'))"
@@ -80,13 +80,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = set()\n",
+    "# names = set()\n",
     "\n",
-    "for uid, path in structure_set_paths.items():\n",
-    "    dcm = pydicom.read_file(\n",
-    "        path, force=True, specific_tags=['StructureSetROISequence'])\n",
-    "    for item in dcm.StructureSetROISequence:\n",
-    "        names.add(item.ROIName)"
+    "# for uid, path in structure_set_paths.items():\n",
+    "#     dcm = pydicom.read_file(\n",
+    "#         path, force=True, specific_tags=['StructureSetROISequence'])\n",
+    "#     for item in dcm.StructureSetROISequence:\n",
+    "#         names.add(item.ROIName)"
    ]
   },
   {
@@ -405,9 +405,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapped_names = set(names_map.keys())\n",
-    "print(mapped_names.difference(names))\n",
-    "names.difference(mapped_names)"
+    "# mapped_names = set(names_map.keys())\n",
+    "# print(mapped_names.difference(names))\n",
+    "# names.difference(mapped_names)"
    ]
   },
   {
@@ -514,27 +514,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From Matthew Coopers work in ../old/data_generator.py\n",
+    "def get_image_transformation_parameters(dcm_ct):\n",
+    "    # From Matthew Coopers work in ../old/data_generator.py\n",
+    "    \n",
+    "    position = dcm_ct.ImagePositionPatient\n",
+    "    spacing = [x for x in dcm_ct.PixelSpacing] + [dcm_ct.SliceThickness]\n",
+    "    orientation = dcm_ct.ImageOrientationPatient\n",
     "\n",
-    "position = dcm_ct.ImagePositionPatient\n",
-    "spacing = [x for x in dcm_ct.PixelSpacing] + [dcm_ct.SliceThickness]\n",
-    "orientation = dcm_ct.ImageOrientationPatient\n",
-    "\n",
-    "dx, dy, *_ = spacing\n",
-    "Cx, Cy, *_ = position\n",
-    "Ox, Oy = orientation[0], orientation[4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_size = np.shape(dcm_ct.pixel_array)\n",
-    "\n",
-    "x_grid = np.arange(Cx, Cx + ct_size[0]*dx*Ox, dx*Ox)\n",
-    "y_grid = np.arange(Cy, Cy + ct_size[1]*dy*Oy, dy*Oy)"
+    "    dx, dy, *_ = spacing\n",
+    "    Cx, Cy, *_ = position\n",
+    "    Ox, Oy = orientation[0], orientation[4]\n",
+    "    \n",
+    "    return dx, dy, Cx, Cy, Ox, Oy\n"
    ]
   },
   {
@@ -561,51 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours_by_ct_uid[ct_uid][organ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expansion = 5\n",
-    "new_ct_size = np.array(ct_size) * expansion\n",
-    "\n",
-    "\n",
-    "expanded_mask = np.zeros(new_ct_size)\n",
-    "\n",
-    "for xyz in contours_by_ct_uid[ct_uid][organ]:\n",
-    "    x = np.array(xyz[0::3])\n",
-    "    y = np.array(xyz[1::3])\n",
-    "    z = xyz[2::3]\n",
-    "    \n",
-    "    assert len(set(z)) == 1\n",
-    "    \n",
-    "    r = (((y - Cy) / dy * Oy) + 0.5) * expansion\n",
-    "    c = (((x - Cx) / dx * Ox) + 0.5) * expansion\n",
-    "    \n",
-    "    expanded_mask = np.logical_or(expanded_mask, skimage.draw.polygon2mask(new_ct_size, np.array(list(zip(r, c)))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(expanded_mask)\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_ct_size"
+    "original_contours = contours_by_ct_uid[ct_uid][organ]"
    ]
   },
   {
@@ -617,10 +564,7 @@
     "def reduce_expanded_mask(expanded_mask, img_size, expansion):\n",
     "    return np.mean(np.mean(\n",
     "        tf.reshape(expanded_mask, (img_size, expansion, img_size, expansion)),\n",
-    "        axis=1), axis=2)\n",
-    "\n",
-    "mask = reduce_expanded_mask(expanded_mask, ct_size[0], expansion)\n",
-    "mask = 2 * mask - 1"
+    "        axis=1), axis=2)"
    ]
   },
   {
@@ -629,13 +573,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.figure(figsize=(20, 20))\n",
+    "def calculate_aliased_mask(contours, dcm_ct, expansion=5):\n",
+    "    dx, dy, Cx, Cy, Ox, Oy = get_image_transformation_parameters(dcm_ct)\n",
+    "    \n",
+    "    ct_size = np.shape(dcm_ct.pixel_array)\n",
+    "    x_grid = np.arange(Cx, Cx + ct_size[0]*dx*Ox, dx*Ox)\n",
+    "    y_grid = np.arange(Cy, Cy + ct_size[1]*dy*Oy, dy*Oy)\n",
+    "    \n",
+    "    new_ct_size = np.array(ct_size) * expansion\n",
+    "    \n",
+    "    expanded_mask = np.zeros(new_ct_size)\n",
+    "    \n",
+    "    for xyz in contours:\n",
+    "        x = np.array(xyz[0::3])\n",
+    "        y = np.array(xyz[1::3])\n",
+    "        z = xyz[2::3]\n",
     "\n",
-    "plt.contourf(x_grid, y_grid, mask)\n",
-    "plt.colorbar()\n",
+    "        assert len(set(z)) == 1\n",
     "\n",
-    "cs = plt.contour(x_grid, y_grid, mask, [0])\n",
-    "plt.axis('equal')"
+    "        r = (((y - Cy) / dy * Oy)) * expansion + (expansion - 1) * 0.5\n",
+    "        c = (((x - Cx) / dx * Ox)) * expansion + (expansion - 1) * 0.5\n",
+    "\n",
+    "        expanded_mask = np.logical_or(expanded_mask, skimage.draw.polygon2mask(new_ct_size, np.array(list(zip(r, c)))))\n",
+    "        \n",
+    "    mask = reduce_expanded_mask(expanded_mask, ct_size[0], expansion)\n",
+    "    mask = 2 * mask - 1\n",
+    "    \n",
+    "    return x_grid, y_grid, mask"
    ]
   },
   {
@@ -644,8 +608,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours = [\n",
-    "    path.vertices for path in cs.collections[0].get_paths()]"
+    "def get_contours_from_mask(x_grid, y_grid, mask):\n",
+    "    cs = plt.contour(x_grid, y_grid, mask, [0]);\n",
+    "    \n",
+    "    contours = [\n",
+    "        path.vertices for path in cs.collections[0].get_paths()\n",
+    "    ]\n",
+    "    \n",
+    "    plt.close()\n",
+    "    \n",
+    "    return contours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_grid, y_grid, mask_with_aliasing = calculate_aliased_mask(original_contours, dcm_ct)\n",
+    "_, _, mask_without_aliasing = calculate_aliased_mask(original_contours, dcm_ct, expansion=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours_with_aliasing = get_contours_from_mask(x_grid, y_grid, mask_with_aliasing)\n",
+    "contours_without_aliasing = get_contours_from_mask(x_grid, y_grid, mask_without_aliasing)"
    ]
   },
   {
@@ -656,7 +648,7 @@
    "source": [
     "plt.figure(figsize=(10,10))\n",
     "\n",
-    "for xyz in contours_by_ct_uid[ct_uid][organ]:\n",
+    "for xyz in original_contours:\n",
     "    x = np.array(xyz[0::3])\n",
     "    y = np.array(xyz[1::3])\n",
     "    \n",
@@ -673,7 +665,7 @@
    "source": [
     "plt.figure(figsize=(10,10))\n",
     "\n",
-    "for contour in contours:\n",
+    "for contour in contours_with_aliasing:\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
     "\n",
@@ -688,11 +680,11 @@
    "source": [
     "plt.figure(figsize=(10,10))\n",
     "\n",
-    "for contour in contours:\n",
+    "for contour in contours_with_aliasing:\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
     "\n",
-    "for xyz in contours_by_ct_uid[ct_uid][organ]:\n",
+    "for xyz in original_contours:\n",
     "    x = np.array(xyz[0::3])\n",
     "    y = np.array(xyz[1::3])\n",
     "    \n",
@@ -706,14 +698,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
+    "for contour in contours_without_aliasing:\n",
+    "    plt.plot(contour[:,0], contour[:,1])\n",
+    "    plt.plot(contour[:,0], contour[:,1])\n",
+    "\n",
+    "plt.axis('equal')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
+    "for contour in contours_without_aliasing:\n",
+    "    plt.plot(contour[:,0], contour[:,1])\n",
+    "    plt.plot(contour[:,0], contour[:,1])\n",
+    "\n",
+    "for xyz in original_contours:\n",
+    "    x = np.array(xyz[0::3])\n",
+    "    y = np.array(xyz[1::3])\n",
+    "    \n",
+    "    plt.plot(x, y)\n",
+    "    \n",
+    "plt.axis('equal')   "
+   ]
   }
  ],
  "metadata": {
